--- a/datn/backend/.env
+++ b/datn/backend/.env
@@ -1,5 +1,5 @@
 PORT = 3001
-MONGO_DB=mongodb://localhost:27017/dtb
+MONGO_DB='mongodb://127.0.0.1:27017/dtb'
 ACCESS_TOKEN=access_token
 REFRESH_TOKEN=refresh_token
 CLOUDINARY_API_SECRET="us10-zBGPm-D3V1Ma4RTzmNacwo"
