--- a/datn/backend/package.json
+++ b/datn/backend/package.json
@@ -34,6 +34,7 @@
     "path": "^0.12.7",
     "redis": "^4.6.13",
     "slugify": "^1.6.6",
-    "util": "^0.12.5"
+    "util": "^0.12.5",
+    "uuid": "^10.0.0"
   }
 }
