--- a/datn/frontend/package.json
+++ b/datn/frontend/package.json
@@ -17,6 +17,7 @@
     "antd": "^5.15.4",
     "axios": "^1.6.8",
     "boostrap": "^2.0.0",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "mdb-react-ui-kit": "^7.2.0",
     "mdb-ui-kit": "^7.2.0",
