--- a/datn/frontend/package.json
+++ b/datn/frontend/package.json
@@ -31,6 +31,7 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
+    "react-star-rating-component": "^1.4.1",
     "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
