--- a/datn/backend/.env
+++ b/datn/backend/.env
@@ -12,3 +12,5 @@ GOOGLE_CALLBACK_URL="http://localhost:3001/api/auth/google/callback"
 FACEBOOK_CLIENT_ID="412546711702750"
 FACEBOOK_CLIENT_SECRET="22feeb802e98e7b392057ad0acd4c48a"
 FACEBOOK_CALLBACK_URL="http://localhost:3001/api/auth/facebook/callback"
+#paypal
+CLIENT_ID="AfEnMkMTk9Mp4mE6TQkrboXYlSLLZdK-golmOEr_4nRMDyHRDxmW53pWT_IsPwvZPIRkVWdw4lDbHhA4"
